@@ -366,6 +366,7 @@ rubia-difficulty-setting=Rubia planet difficulty
 rubia-rocketizer-early-unlock=Rocketizer early unlock
 invert-trashsteroid-scaling=Invert trashsteroid visual scaling
 rubia-megabase-mode=Megabase mode
+rubia-tech-cost-multiplier=Rubia trigger tech cost multiplier
 
 [mod-setting-description]
 disable-lyrical-music=Turns on accessibility mode for people with trash taste. Default off is the intended way to play the mod.
@@ -376,6 +377,7 @@ rubia-difficulty-setting=Magnifies trashsteroid health, damage dealt by trashste
 rubia-rocketizer-early-unlock=Unlock the rocketizer alongside rocket silos (as though Rubia was not installed). This setting is for backwards compatibility with save files that installed "Rocket Cargo Insertion" prior to downloading Rubia. Please do not enable unless this applies to you. Default OFF.
 invert-trashsteroid-scaling=Flip trashsteroid scaling to become smaller as they make impact (instead of larger). Purely visual. Default OFF.
 rubia-megabase-mode=Makes several things on Rubia lighter on UPS, but removes some mechanics and graphical improvements. This setting does nothing prior to beating Rubia, and does alter the difficulty. Default OFF.
+rubia-tech-cost-multiplier=Technologies for Rubia's trigger technologies are immune to standard tech cost multiplier settings. This setting multiplies the cost for these technologies. Bigger number = bigger cost. Default = 1.
 
 [string-mod-setting]
 rubia-difficulty-setting-easy=1) Micropenis
@@ -404,7 +406,7 @@ pre-rubia-cutscene-unprepared-naked=You feel a shiver down your spine. You are t
 pre-rubia-cutscene-unprepared-low-shield=You feel almost naked. You have nowhere near enough protection to land on Rubia alive.
 pre-rubia-cutscene-unprepared-medium-shield=You feel like you only have around half of the gear you need to land on Rubia without dying.
 pre-rubia-cutscene-unprepared-almost-shield=You feel like you are just barely falling short of what you need to land on Rubia without dying.
-pre-rubia-cutscene-unprepared-too-close=You are unsure if you have what you need too land on Rubia without dying. It seems too close to call.
+pre-rubia-cutscene-unprepared-too-close=You are unsure if you have what you need to land on Rubia without dying. It seems too close to call.
 
 
 ;⚠️ = [img=utility/warning_icon]
